--- a/index.html
+++ b/index.html
@@ -39,15 +39,16 @@
               Models</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://www.aclweb.org/portal/">Anonymous ACL Submission</a><sup>1</sup>,</span>
+                <a href="https://scholar.google.de/citations?user=qEXBDy4AAAAJ&hl=en&oi=ao">Philipp Wicke</a><sup>1,2</sup>,</span>
               <span class="author-block">
-                <a href="https://www.aclweb.org/portal/">Anonymous ACL Submission</a><sup>2</sup>,</span>
+                <a href="https://scholar.google.de/citations?user=CqvC1uoAAAAJ&hl=en&oi=ao">Lennart Wachowiak</a><sup>3</sup>,</span>
               <span class="author-block">
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>1</sup>Anonymous,</span>
-              <span class="author-block"><sup>2</sup>Anonymous</span>
+              <span class="author-block"><sup>1</sup>CIS, Ludwig-Maximilian-University, Munich,</span>
+              <span class="author-block"><sup>2</sup>Munich Center for Machine Learning (MCML)</span>
+              <span class="author-block"><sup>3</sup>King’s College London</span>
             </div>
 
             <div class="column has-text-centered">
@@ -71,7 +72,7 @@
                 </span>
                 <!-- Code Link. -->
                 <span class="link-block">
-                  <a href="https://github.com/" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/PhilWicke/Image-Schemas-in-LLMs" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
@@ -364,10 +365,10 @@
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
       <pre><code>@article{anonyear,
-  author    = {Anonymous},
+  author    = {Wicke, Philipp and Wachowiak, Lennart},
   title     = {Exploring Spatial Schemas in Large Language Models},
-  journal   = {journal},
-  year      = {year},
+  journal   = {arXiv preprint arXiv:xxxx.xxxxx},
+  year      = {2024}
 }</code></pre>
     </div>
   </section>
