--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a href="https://arxiv.org/" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/pdf/2402.00956.pdf" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
@@ -63,7 +63,7 @@
                   </a>
                 </span>
                 <span class="link-block">
-                  <a href="https://arxiv.org/" class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://arxiv.org/abs/2402.00956" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
                     </span>
@@ -367,7 +367,7 @@
       <pre><code>@article{anonyear,
   author    = {Wicke, Philipp and Wachowiak, Lennart},
   title     = {Exploring Spatial Schemas in Large Language Models},
-  journal   = {arXiv preprint arXiv:xxxx.xxxxx},
+  journal   = {arXiv preprint arXiv:2402.00956},
   year      = {2024}
 }</code></pre>
     </div>
