--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
               Models</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://scholar.google.de/citations?user=qEXBDy4AAAAJ&hl=en&oi=ao">Philipp Wicke</a><sup>1,2</sup>,</span>
+                <a href="https://scholar.google.de/citations?user=qEXBDy4AAAAJ&hl=en&oi=ao">Philipp Wicke</a><sup>*,1,2</sup>,</span>
               <span class="author-block">
-                <a href="https://scholar.google.de/citations?user=CqvC1uoAAAAJ&hl=en&oi=ao">Lennart Wachowiak</a><sup>3</sup>,</span>
+                <a href="https://scholar.google.de/citations?user=CqvC1uoAAAAJ&hl=en&oi=ao">Lennart Wachowiak</a><sup>*,3</sup>,</span>
               <span class="author-block">
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>1</sup>CIS, Ludwig-Maximilian-University, Munich,</span>
+              <span class="author-block"><sup>*</sup>Both authors contributed equally</span>
+              <span class="author-block"><sup>1</sup>CIS, Ludwig-Maximilian-University, Munich</span>
               <span class="author-block"><sup>2</sup>Munich Center for Machine Learning (MCML)</span>
               <span class="author-block"><sup>3</sup>King’s College London</span>
             </div>
