--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@article{anonyear,
+      <pre><code>@article{wickewacho2024exp,
   author    = {Wicke, Philipp and Wachowiak, Lennart},
   title     = {Exploring Spatial Schemas in Large Language Models},
   journal   = {arXiv preprint arXiv:2402.00956},
