--- a/index.html
+++ b/index.html
@@ -368,6 +368,9 @@
       <pre><code>@article{wickewacho2024exp,
   author    = {Wicke, Philipp and Wachowiak, Lennart},
   title     = {Exploring Spatial Schemas in Large Language Models},
+  booktitle = {Findings of the Association for Computational Linguistics: ACL 2024},
+  address   = {Bangkok, Thailand},
+  publisher = {Association for Computational Linguistics},
   journal   = {arXiv preprint arXiv:2402.00956},
   year      = {2024}
 }</code></pre>
